[package]
name = "gen_art"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.2"
bevy =  { version = "0.13.0"}
bevy_asset_loader = { version = "0.20.0", features = ["2d"] }
rand = "0.9.0-alpha.0"
